--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/collection.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/collection.mustache
@@ -1,11 +1,13 @@
-<?php {{#models}}{{#model}}namespace {{namespaceName}};
+<?php {{#models}}{{#model}}
+
+namespace {{namespaceName}};
 
 use Illuminate\Support\Collection as IlluminateCollection;
 
 /**
  * Collection of {{classname}}
  *
- * @author    Pepijn Senders <pepijn.senders@hellofresh.de>
+ * @author    Pepijn Senders <ps@hellofresh.com>
  * @package   hellofresh/php-client
  *
  */
