--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/model.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/model.mustache
@@ -1,4 +1,6 @@
-<?php {{#models}}{{#model}}namespace {{namespaceName}};
+<?php {{#models}}{{#model}}
+
+namespace {{namespaceName}};
 
 use Illuminate\Support\Contracts\ArrayableInterface;
 use Illuminate\Support\Contracts\JsonableInterface;
@@ -6,7 +8,7 @@ use Illuminate\Support\Contracts\JsonableInterface;
 /**
  * Entity of {{classname}}
  *
- * @author    Pepijn Senders <pepijn.senders@hellofresh.de>
+ * @author    Pepijn Senders <ps@hellofresh.com>
  * @package   hellofresh/php-client
  *
  */
