Get info from ApiInfo

--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshClient.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshClient.mustache
@@ -4,6 +4,11 @@ namespace HelloFresh\HelloFreshClient;
 
 use HelloFresh\Client\Client;
 
+/**
+{{#apiInfo}}{{#apis}}{{#operations}}
+ * @property-read {{classname}}{{/operations}}{{/apis}}{{/apiInfo}}
+ */
 class HelloFreshClient extends Client
 {
+
 }
