--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshClient.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshClient.mustache
@@ -4,9 +4,8 @@ namespace HelloFresh\HelloFreshClient;
 
 use HelloFresh\Client\Client;
 
-/**
-{{#apiInfo}}{{#apis}}{{#operations}}
- * @property-read {{classname}}{{/operations}}{{/apis}}{{/apiInfo}}
+/**{{#apiInfo}}{{#apis}}{{#operations}}
+ * @property-read {{namespaceName}}{{/operations}}{{/apis}}{{/apiInfo}}
  */
 class HelloFreshClient extends Client
 {
