--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshClient.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshClient.mustache
@@ -5,7 +5,7 @@ namespace HelloFresh\HelloFreshClient;
 use HelloFresh\Client\Client;
 
 /**{{#apiInfo}}{{#apis}}{{#operations}}
- * @property-read {{namespaceName}}{{/operations}}{{/apis}}{{/apiInfo}}
+ * @property-read {{namespaceName}} {{variableName}}{{/operations}}{{/apis}}{{/apiInfo}}
  */
 class HelloFreshClient extends Client
 {
