--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshClient.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshClient.mustache
@@ -3,9 +3,10 @@
 namespace HelloFresh\HelloFreshClient;
 
 use HelloFresh\Client\Client;
+use HelloFresh\HelloFreshClient\Purpose;
 
 /**{{#apiInfo}}{{#apis}}{{#operations}}
- * @property-read {{namespaceName}} {{variableName}}{{/operations}}{{/apis}}{{/apiInfo}}
+ * @property-read Purpose\{{classname}} ${{classVarName}}{{/operations}}{{/apis}}{{/apiInfo}}
  */
 class HelloFreshClient extends Client
 {
