--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/api.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/api.mustache
@@ -1,6 +1,6 @@
 {{#operations}}<?php
 
-namespace HelloFresh\Api\PhpClient;
+namespace HelloFresh\HelloFreshClient\Purpose;
 
 use HelloFresh\HelloFreshClient\HelloFreshClient;
 
