Updates to templates

--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshClient.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshClient.mustache
@@ -10,5 +10,6 @@ use HelloFresh\HelloFreshClient\Purpose;
  */
 class HelloFreshClient extends Client
 {
-
+    const DEFAULT_BASE_URL = 'https://api-{version}.hellofresh.com';
+    const DEFAULT_BASE_VERSION = 'v2';
 }
