--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/api.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/api.mustache
@@ -4,6 +4,7 @@ namespace HelloFresh\HelloFreshClient\Purpose;
 
 use HelloFresh\HelloFreshClient\HelloFreshClient;
 use HelloFresh\HelloFreshClient\Deserializer;
+use HelloFresh\BaseClient\PurposeInterface;
 
 /**
  * Short-hand functions to the {{classname}} API
@@ -12,7 +13,7 @@ use HelloFresh\HelloFreshClient\Deserializer;
  * @package   hellofresh/php-client
  *
  */
-class {{classname}}
+class {{classname}} implements PurposeInterface
 {
     /**
      * @var HelloFreshClient
