--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshClient.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshClient.mustache
@@ -2,7 +2,7 @@
 
 namespace HelloFresh\HelloFreshClient;
 
-use HelloFresh\Client\Client;
+use HelloFresh\BaseClient\Client;
 use HelloFresh\HelloFreshClient\Purpose;
 
 /**{{#apiInfo}}{{#apis}}{{#operations}}
