--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/model.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/model.mustache
@@ -2,11 +2,10 @@
 
 namespace {{namespaceName}};
 
-use HelloFresh\BaseClient\ModelInterface;
+use HelloFresh\HelloFreshClient\AbstractModel;
 
-class {{classname}} implements ModelInterface
+class {{classname}} extends AbstractModel
 {
-
     /**
      * Array of swaggertypes
      *
@@ -24,33 +23,6 @@ class {{classname}} implements ModelInterface
      */{{/description}}
     public ${{name}};
     {{/vars}}
-
-    /**
-     * @return array
-     */
-    public function toArray()
-    {
-        $entity = [];
-
-        foreach (self::$swaggerTypes as $name => $type) {
-            if (starts_with($name, 'HelloFresh\\HelloFreshClient\\Entities') && class_exists($name)) {
-                $entity[$name] = $this->$name->toArray();
-            } else {
-                $entity[$name] = $this->$name;
-            }
-        }
-
-        return $entity;
-    }
-
-    /**
-     * @param  integer $options
-     * @return string
-     */
-    public function toJson($options = 0)
-    {
-        return json_encode($this->toArray(), $options);
-    }
 }
 {{/model}}
 {{/models}}
