--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/collection.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/collection.mustache
@@ -3,8 +3,9 @@
 namespace {{namespaceName}};
 
 use Illuminate\Support\Collection as IlluminateCollection;
+use HelloFresh\HelloFreshClient\AbstractCollection;
 
-class {{classname}} extends IlluminateCollection
+class {{classname}} extends AbstractCollection, IlluminateCollection
 {
 
     /**
