--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/collection.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/collection.mustache
@@ -2,10 +2,9 @@
 
 namespace {{namespaceName}};
 
-use Illuminate\Support\Collection as IlluminateCollection;
 use HelloFresh\HelloFreshClient\AbstractCollection;
 
-class {{classname}} extends AbstractCollection, IlluminateCollection
+class {{classname}} extends AbstractCollection
 {
 
     /**
