--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshClient.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/HelloFreshClient.mustache
@@ -7,6 +7,7 @@ use HelloFresh\HelloFreshClient\Purpose;
 use HelloFresh\HelloFreshClient\Entities\Authentication\Authentication;
 use GuzzleHttp\Message\ResponseInterface;
 use HelloFresh\BaseClient\Auth\Auth;
+use HelloFresh\BaseClient\Auth\AccessToken;
 use HelloFresh\BaseClient\Exception\AccessTokenExpiredException;
 
 /**
