--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/model.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/model.mustache
@@ -7,9 +7,7 @@ use HelloFresh\HelloFreshClient\AbstractModel;
 class {{classname}} extends AbstractModel
 {
     /**
-     * Array of swaggertypes
-     *
-     * @var array
+     * @inherit
      */
     public static $swaggerTypes = [
         {{#vars}}'{{name}}' => '{{{datatype}}}'{{#hasMore}},
